--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,48 @@
 * {
+    box-sizing: border-box;
+}
+
+body {
+    padding: 10px;
+    background-color: blue;
+    display: inline-flex;
+}
+
+#main div {
     background-color: aqua;
+    border: 2px black solid;
+    padding: 6px;
+    display: inline-flex;
+    flex-direction: column;
+    align-content: space-between;
+    border-collapse: collapse;
+}
+
+h1 {
+    text-align: center;
+    text-decoration: underline;
+    padding: 2px;
+    margin-top: 3px;
+    margin-bottom: 5px;
+}
+
+h2 {
+    text-align: center;
+    text-decoration: underline;
+    border-top: black dashed 1px;
+    padding: 15px;
+    margin-top: 3px;
+    margin-bottom: 2px;
+}
+
+.error {
+    background-color: red;
+}
+
+pre {
+    font-size: 14px;
+    word-wrap: break-word;
+    margin: 0;
+    padding: 4px 7px;
+    border-top: black solid 1px;
 }
